applications/dev/app2/aws/etherpad_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etherpad
  name: etherpad
  namespace: app2-d
spec:
  ports:
  - name: etherpad
    port: 9001
    protocol: TCP
  selector:
    app: etherpad
