applications/dev/app2/aws/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: app2-d
spec:
  ports:
  - name: postgresql
    nodePort: 0
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
