applications/dev/app2/aws/etherpad_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: etherpad
  name: etherpad-route
  namespace: app2-d
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: etherpad
  port:
    targetPort: 9001
  host: etherpad.apps.aws-alpha.aws-poc-clusters.mcatest.org
